# http4k-by-example

./: .bazelrc  BUILD.bazel  WORKSPACE
src/test/resources/functional/: BUILD.bazel
src/test/resources/nonfunctional/: BUILD.bazel
src/test/resources/unit/: BUILD.bazel
